// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as a EditButton 1`] = `
<IconButton>
  <img
    alt="Edit"
    src="test-file-stub"
  />
</IconButton>
`;

exports[`should EditButton pass props 1`] = `
<IconButton
  dataTest="dataTest"
>
  <img
    alt="Edit"
    src="test-file-stub"
  />
</IconButton>
`;
